--- a/README
+++ b/README
@@ -1,1 +1,3 @@
-A very simple Sokoban clone using Tkinter for GUI. Aka push blue blocks on yellow ones to win using the arrow keys ;). 
+A very simple Sokoban clone using Tkinter for GUI. Aka push blue blocks on yellow ones to win using the arrow keys ;).
+
+PS: Max width and height is 1000, if you have a smaller resolution, please change the variables accordingly.
